# django5-tutorial

./: pyproject.toml
django-polls/: setup.cfg
django-polls/django_polls/: admin.py  models.py  urls.py  views.py
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django-polls/django_polls/migrations/: 0001_initial.py  0002_question_author.py  0003_alter_choice_choice_text.py  0004_alter_choice_choice_text_and_more.py  0005_alter_question_pub_date.py  0006_alter_question_pub_date.py
django-polls/django_polls/templates/polls/: index.html  results.html
django-polls/django_polls/tests/: test_models.py
mysite/mysite/: settings.py  urls.py
mysite/templates/admin/: base_site.html
