[tool.poetry]
name = "django-poetry-demo"
version = "0.1.0"
description = ""
authors = ["lol"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.3"
django-polls  = { file = "/Users/admin/work/learn/django/django-polls/django_polls/dist/django-polls-0.1.tar.gz" }
pytest = { version="8.1.1", optional=true }
parameterized = { version="0.9.0", optional=true}

[tool.poetry.extras]
pytest = ["pytest"]
parameterized = ["parameterized"]

[build-system]
requires = ["django-poetry-demo"]
build-backend = "poetry.core.masonry.api"